--- a/pom.xml
+++ b/pom.xml
@@ -57,15 +57,15 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <!-- moduli security per implementare autenticazione e autorizzazione -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-starter-security</artifactId>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.security</groupId>-->
-        <!--            <artifactId>spring-security-test</artifactId>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- modulo security thymeleaf extras -->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
